<?xml version="1.0"?>
<package format="3">
  <name>d1_base_bridge</name>
  <version>0.0.1</version>
  <description>Bridge standard /cmd_vel to D1 SDK /d15020024/command/cmd_twist.</description>

  <maintainer email="sunrise@example.com">sunrise</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
